--- a/tokens/config.json
+++ b/tokens/config.json
@@ -260,15 +260,15 @@
           "solid": {
             "low": {
               "1": {
-                "$value": "hsl(155, 100%, 92%)",
+                "$value": "hsl(155, 52%, 86%)",
                 "$type": "color"
               },
               "2": {
-                "$value": "hsl(155, 100%, 88%)",
+                "$value": "hsl(155, 52%, 82%)",
                 "$type": "color"
               },
               "3": {
-                "$value": "hsl(155, 100%, 84%)",
+                "$value": "hsl(155, 52%, 76%)",
                 "$type": "color"
               }
             },
@@ -342,43 +342,43 @@
           "solid": {
             "low": {
               "1": {
-                "$value": "hsl(40, 62%, 87%)",
+                "$value": "hsl(48, 100%, 90%)",
                 "$type": "color"
               },
               "2": {
-                "$value": "hsl(40, 62%, 83%)",
+                "$value": "hsl(48, 100%, 86%)",
                 "$type": "color"
               },
               "3": {
-                "$value": "hsl(40, 62%, 79%)",
+                "$value": "hsl(48, 100%, 82%)",
                 "$type": "color"
               }
             },
             "mid": {
               "1": {
-                "$value": "hsl(40, 100%, 38%)",
+                "$value": "hsl(48, 100%, 56%)",
                 "$type": "color"
               },
               "2": {
-                "$value": "hsl(40, 100%, 36%)",
+                "$value": "hsl(48, 100%, 52%)",
                 "$type": "color"
               },
               "3": {
-                "$value": "hsl(40, 100%, 34%)",
+                "$value": "hsl(48, 100%, 48%)",
                 "$type": "color"
               }
             },
             "high": {
               "1": {
-                "$value": "hsl(40, 100%, 16%)",
+                "$value": "hsl(48, 100%, 16%)",
                 "$type": "color"
               },
               "2": {
-                "$value": "hsl(40, 100%, 14%)",
+                "$value": "hsl(48, 100%, 14%)",
                 "$type": "color"
               },
               "3": {
-                "$value": "hsl(40, 100%, 12%)",
+                "$value": "hsl(48, 100%, 12%)",
                 "$type": "color"
               }
             }
@@ -386,52 +386,120 @@
           "translucent": {
             "low": {
               "1": {
-                "$value": "hsla(40, 100%, 29%, 0.36)",
+                "$value": "hsla(47, 100%, 56%, 0.36)",
                 "$type": "color"
               },
               "2": {
-                "$value": "hsla(40, 100%, 29%, 0.40)",
+                "$value": "hsla(47, 100%, 56%, 0.40)",
                 "$type": "color"
               },
               "3": {
-                "$value": "hsla(40, 100%, 29%, 0.44)",
+                "$value": "hsla(47, 100%, 56%, 0.44)",
                 "$type": "color"
               }
             },
             "mid": {
               "1": {
-                "$value": "hsla(40, 100%, 29%, 0.48)",
+                "$value": "hsla(47, 100%, 56%, 0.48)",
                 "$type": "color"
               },
               "2": {
-                "$value": "hsla(40, 100%, 29%, 0.56)",
+                "$value": "hsla(47, 100%, 56%, 0.56)",
                 "$type": "color"
               },
               "3": {
-                "$value": "hsla(40, 100%, 29%, 0.64)",
+                "$value": "hsla(47, 100%, 56%, 0.64)",
                 "$type": "color"
               }
             },
             "high": {
               "1": {
-                "$value": "hsla(40, 100%, 29%, 0.88)",
+                "$value": "hsla(47, 100%, 56%, 0.88)",
                 "$type": "color"
               }
             }
           }
         },
         "neutral": {
-          "default": {
-            "$value": "hsl(220, 0%, 48%)",
-            "$type": "color"
+          "solid": {
+            "low": {
+              "1": {
+                "$value": "hsl(220, 0%, 98%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(220, 0%, 94%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(220, 0%, 92%)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsl(220, 0%, 52%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(220, 0%, 48%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(220, 0%, 44%)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsl(220, 0%, 24%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(220, 0%, 16%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(220, 0%, 8%)",
+                "$type": "color"
+              }
+            }
           },
-          "low": {
-            "$value": "hsl(220, 0%, 96%)",
-            "$type": "color"
-          },
-          "high": {
-            "$value": "hsl(220, 0%, 8%)",
-            "$type": "color"
+          "translucent": {
+            "low": {
+              "1": {
+                "$value": "hsla(220, 0%, 60%, 0.12)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(220, 0%, 60%, 0.18)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(220, 0%, 60%, 0.24)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsla(220, 0%, 56%, 0.32)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(220, 0%, 56%, 0.44)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(220, 0%, 56%, 0.56)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsla(220, 0%, 48%, 0.88)",
+                "$type": "color"
+              }
+            }
           }
         }
       },
