--- a/tokens/application.json
+++ b/tokens/application.json
@@ -23,7 +23,7 @@
         "border": {
           "default": {
             "$type": "color",
-            "$value": "{config.color.palette.grey.translucent.mid.1}"
+            "$value": "{config.color.palette.grey.translucent.4}"
           }
         },
         "fg": {
@@ -32,12 +32,12 @@
             "$type": "color"
           },
           "muted": {
-            "$value": "{config.color.palette.grey.translucent.high.1}",
+            "$value": "{config.color.palette.grey.translucent.12}",
             "$type": "color"
           },
           "subtle": {
             "default": {
-              "$value": "{config.color.palette.grey.translucent.mid.1}",
+              "$value": "{config.color.palette.grey.translucent.4}",
               "$type": "color"
             }
           },
@@ -126,15 +126,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.low.1}"
+                "$value": "{config.color.palette.grey.translucent.1}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.low.2}"
+                "$value": "{config.color.palette.grey.translucent.2}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.low.3}"
+                "$value": "{config.color.palette.grey.translucent.3}"
               }
             },
             "tone": {
@@ -162,15 +162,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.1}"
+                "$value": "{config.color.palette.grey.translucent.4}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.2}"
+                "$value": "{config.color.palette.grey.translucent.5}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.3}"
+                "$value": "{config.color.palette.grey.translucent.6}"
               }
             }
           },
@@ -192,13 +192,13 @@
             "muted": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.high.1}"
+                "$value": "{config.color.palette.grey.translucent.12}"
               }
             },
             "subtle": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.3}"
+                "$value": "{config.color.palette.grey.translucent.6}"
               }
             },
             "onSolid": {
@@ -247,15 +247,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.low.1}"
+                "$value": "{config.color.palette.grey.translucent.1}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.low.2}"
+                "$value": "{config.color.palette.grey.translucent.2}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.low.3}"
+                "$value": "{config.color.palette.grey.translucent.3}"
               }
             },
             "tone": {
@@ -283,15 +283,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.1}"
+                "$value": "{config.color.palette.grey.translucent.4}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.2}"
+                "$value": "{config.color.palette.grey.translucent.5}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.3}"
+                "$value": "{config.color.palette.grey.translucent.6}"
               }
             }
           },
@@ -313,13 +313,13 @@
             "muted": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.mid.3}"
+                "$value": "{config.color.palette.grey.translucent.6}"
               }
             },
             "subtle": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.low.3}"
+                "$value": "{config.color.palette.grey.translucent.3}"
               }
             },
             "onSolid": {
@@ -337,7 +337,7 @@
             "onTranslucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.high.1}"
+                "$value": "{config.color.palette.grey.translucent.12}"
               }
             },
             "light": {
@@ -368,15 +368,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.low.1}"
+                "$value": "{config.color.palette.blue.translucent.2}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.low.2}"
+                "$value": "{config.color.palette.blue.translucent.3}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.low.3}"
+                "$value": "{config.color.palette.blue.translucent.4}"
               }
             },
             "tone": {
@@ -404,15 +404,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.mid.1}"
+                "$value": "{config.color.palette.blue.translucent.4}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.mid.2}"
+                "$value": "{config.color.palette.blue.translucent.5}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.mid.3}"
+                "$value": "{config.color.palette.blue.translucent.6}"
               }
             }
           },
@@ -434,13 +434,13 @@
             "muted": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.high.1}"
+                "$value": "{config.color.palette.blue.translucent.12}"
               }
             },
             "subtle": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.blue.translucent.mid.3}"
+                "$value": "{config.color.palette.blue.translucent.6}"
               }
             },
             "onSolid": {
@@ -489,15 +489,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.low.1}"
+                "$value": "{config.color.palette.red.translucent.2}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.low.2}"
+                "$value": "{config.color.palette.red.translucent.3}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.low.3}"
+                "$value": "{config.color.palette.red.translucent.4}"
               }
             },
             "tone": {
@@ -525,15 +525,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.mid.1}"
+                "$value": "{config.color.palette.red.translucent.4}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.mid.2}"
+                "$value": "{config.color.palette.red.translucent.5}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.mid.3}"
+                "$value": "{config.color.palette.red.translucent.6}"
               }
             }
           },
@@ -555,13 +555,13 @@
             "muted": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.high.1}"
+                "$value": "{config.color.palette.red.translucent.12}"
               }
             },
             "subtle": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.red.translucent.mid.3}"
+                "$value": "{config.color.palette.red.translucent.6}"
               }
             },
             "onSolid": {
@@ -610,15 +610,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.low.1}"
+                "$value": "{config.color.palette.green.translucent.2}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.low.2}"
+                "$value": "{config.color.palette.green.translucent.3}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.low.3}"
+                "$value": "{config.color.palette.green.translucent.4}"
               }
             },
             "tone": {
@@ -646,15 +646,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.mid.1}"
+                "$value": "{config.color.palette.green.translucent.4}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.mid.2}"
+                "$value": "{config.color.palette.green.translucent.5}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.mid.3}"
+                "$value": "{config.color.palette.green.translucent.6}"
               }
             }
           },
@@ -676,13 +676,13 @@
             "muted": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.high.1}"
+                "$value": "{config.color.palette.green.translucent.12}"
               }
             },
             "subtle": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.green.translucent.mid.3}"
+                "$value": "{config.color.palette.green.translucent.6}"
               }
             },
             "onSolid": {
@@ -731,15 +731,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.low.1}"
+                "$value": "{config.color.palette.yellow.translucent.1}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.low.2}"
+                "$value": "{config.color.palette.yellow.translucent.2}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.low.3}"
+                "$value": "{config.color.palette.yellow.translucent.3}"
               }
             },
             "tone": {
@@ -767,15 +767,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.mid.1}"
+                "$value": "{config.color.palette.yellow.translucent.4}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.mid.2}"
+                "$value": "{config.color.palette.yellow.translucent.5}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.mid.3}"
+                "$value": "{config.color.palette.yellow.translucent.6}"
               }
             }
           },
@@ -797,13 +797,13 @@
             "muted": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.high.1}"
+                "$value": "{config.color.palette.yellow.translucent.12}"
               }
             },
             "subtle": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.yellow.translucent.mid.3}"
+                "$value": "{config.color.palette.yellow.translucent.6}"
               }
             },
             "onSolid": {
@@ -852,15 +852,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.low.1}"
+                "$value": "{config.color.palette.neutral.translucent.1}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.low.2}"
+                "$value": "{config.color.palette.neutral.translucent.2}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.low.3}"
+                "$value": "{config.color.palette.neutral.translucent.3}"
               }
             },
             "tone": {
@@ -888,15 +888,15 @@
             "translucent": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.mid.1}"
+                "$value": "{config.color.palette.neutral.translucent.4}"
               },
               "hover": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.mid.2}"
+                "$value": "{config.color.palette.neutral.translucent.5}"
               },
               "active": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.mid.3}"
+                "$value": "{config.color.palette.neutral.translucent.6}"
               }
             }
           },
@@ -918,13 +918,13 @@
             "muted": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.high.1}"
+                "$value": "{config.color.palette.neutral.translucent.12}"
               }
             },
             "subtle": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.neutral.translucent.mid.3}"
+                "$value": "{config.color.palette.neutral.translucent.6}"
               }
             },
             "onSolid": {
@@ -1147,7 +1147,7 @@
           "focusRing": {
             "default": {
               "$type": "color",
-              "$value": "{config.color.palette.blue.translucent.mid.1}"
+              "$value": "{config.color.palette.blue.translucent.4}"
             }
           }
         },
